--- a/vaultwarden/.env
+++ b/vaultwarden/.env
@@ -2,6 +2,7 @@ WEBSOCKET_ENABLED=true  # Enable WebSocket notifications.
 SMTP_HOST=<smtp.domain.tld>
 SMTP_FROM=<vaultwarden@domain.tld>
 SMTP_PORT=465 # 465, StartTLS(587)
+SMTP_SECURITY=off
 SMTP_SSL=false # StartTLS(true)
 SMTP_EXPLICIT_TLS=true # StartTLS(false)
 SMTP_USERNAME=<username>
