--- a/filetas/.env
+++ b/filetas/.env
@@ -1,8 +1,4 @@
 TITLE=文件加速下载 # 网站标题
-DEBUG=Flase
-CHUNK_SIZE=10240
-USERNAME= # BasicAuth 用户名
-PASSWORD= # BasicAuth 密码
 
 TZ="Asia/Shanghai"
-PORT=8000
+SERV_PORT=8000
