--- a/filetas/docker-compose.yml
+++ b/filetas/docker-compose.yml
@@ -2,11 +2,10 @@
 # https://github.com/idevsig/filetas
 services:
   filetas:
-    image: jetsung/filetas:latest
+    image: idevsig/filetas:latest
     container_name: filetas
     restart: unless-stopped
     env_file:
       - ./.env
     ports:
-      - ${PORT}:8000
-    command: [gunicorn, -w, "4", -b, 0.0.0.0:8000, app:app]
+      - ${SERV_PORT}:8000
