fix: 修复 sonic 配置

--- a/sonic/docker-compose.yml
+++ b/sonic/docker-compose.yml
@@ -4,6 +4,7 @@
 services:
   sonic:
     image: valeriansaliou/sonic:latest
+    container_name: sonic
     restart: unless-stopped
     env_file:
     - ./.env
