--- a/sonic/config.cfg
+++ b/sonic/config.cfg
@@ -33,7 +33,7 @@ list_limit_maximum = 500
 
 [store.kv]
 
-path = "./data/store/kv/"
+path = "/var/lib/sonic/store/kv/"
 
 retain_word_objects = 1000
 
@@ -55,7 +55,7 @@ write_ahead_log = true
 
 [store.fst]
 
-path = "./data/store/fst/"
+path = "/var/lib/sonic/store/fst/"
 
 [store.fst.pool]
 
