feat(remark42): 添加 .env 参数

--- a/remark42/.env
+++ b/remark42/.env
@@ -9,6 +9,15 @@ AUTH_FACEBOOK_CSEC=
 AUTH_DISQUS_CID=
 AUTH_DISQUS_CSEC=
 
+#SMTP_HOST=smtp.gmail.com
+#SMTP_PORT=465
+#SMTP_TLS=true
+#SMTP_USERNAME=example.user@gmail.com
+#SMTP_PASSWORD=secretpassword
+#AUTH_EMAIL_FROM=example.user@gmail.com
+#NOTIFY_EMAIL_FROM=example.user@gmail.com
+
+SITE=
 REMARK_URL=
 SECRET=
 ADMIN_PASSWD=
