--- a/emqx/.env
+++ b/emqx/.env
@@ -1,5 +1,8 @@
-EMQX_DASHBOARD__DEFAULT_USERNAME="admin"
-EMQX_DASHBOARD__DEFAULT_PASSWORD="admin888"
+MQTT_PORT=1883
+WS_PORT=8083
+HTTP_PORT=8084
+MQTTS_PORT=8883
+DASH_PORT=18083
 
 # CUSTOM
 TZ=Asia/Shanghai
