--- a/asciinema/docker-compose.yml
+++ b/asciinema/docker-compose.yml
@@ -11,19 +11,19 @@ services:
     container_name: asciinema
     env_file:
     - ./.env
+    ports:
+    - ${SERV_PORT:-4000}:4000
     volumes:
     - asciinema_data:/var/opt/asciinema
-    ports:
-    - $SERV_PORT:4000
     depends_on:
       postgres:
         condition: service_healthy
   postgres:
     image: docker.io/library/postgres:16
-    volumes:
-    - postgres_data:/var/lib/postgresql/data
     environment:
     - POSTGRES_HOST_AUTH_METHOD=trust
+    volumes:
+    - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: [CMD-SHELL, pg_isready -U postgres]
       interval: 2s
