--- a/drone/docker-compose.yml
+++ b/drone/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     image: drone/drone:2
     container_name: drone-server
     restart: unless-stopped
-    volumes:
-    - ./data:/data
     env_file:
     - ./.env
     ports:
-    - ${HTTP_PORT}:80
-    - ${HTTPS_PORT}:443
+    - ${HTTP_PORT:-80}:80
+    - ${HTTPS_PORT:-443}:443
+    volumes:
+    - ./data:/data
 
   drone-runner:
     image: drone/drone-runner-docker:1
