--- a/emqx/docker-compose.yml
+++ b/emqx/docker-compose.yml
@@ -9,8 +9,11 @@ services:
     env_file:
     - ./.env
     ports:
-    - 1883:1883
-    - 8083:8083
-    - 8084:8084
-    - 8883:8883
-    - 18083:18083
+    - ${MQTT_PORT:-1883}:1883
+    - ${WS_PORT:-8083}:8083
+    - ${HTTP_PORT:-8084}:8084
+    - ${MQTTS_PORT:-8883}:8883
+    - ${DASH_PORT:-18083}:18083
+    volumes:
+    - ./data/data:/opt/emqx/data
+    - ./data/log:/opt/emqx/log
