--- a/etcd/single/docker-compose.yml
+++ b/etcd/single/docker-compose.yml
@@ -3,7 +3,7 @@
 
 services:
   etcd:
-    image: quay.io/coreos/etcd:v3.5.6
+    image: quay.io/coreos/etcd:v3.5.18
     container_name: etcd
     restart: unless-stopped
     env_file:
@@ -11,5 +11,5 @@ services:
     volumes:
     - ./data:/etcd-data
     ports:
-    - ${SERV_PORT_1}:2379
-    - ${SERV_PORT_2}:2380
+    - ${SERV_PORT_1:-2379}:2379
+    - ${SERV_PORT_2:-2380}:2380
