--- a/gitea/.env
+++ b/gitea/.env
@@ -16,5 +16,5 @@ POSTGRES_DB=gitea
 TZ=Asia/Shanghai
 GITEA_HTTP_PORT=3000
 GITEA_SSL_PORT=22
-WEB_HTTP_PORT=80
-WEB_HTTPS_PORT=443
+HTTP_PORT=80
+HTTPS_PORT=443
