--- a/gitea/docker-compose.caddy.yml
+++ b/gitea/docker-compose.caddy.yml
@@ -7,7 +7,7 @@ services:
     env_file:
     - ./.env
     ports:
-    - ${WEB_HTTP_PORT}:80
-    - ${WEB_HTTPS_PORT}:443
+    - ${HTTP_PORT:-80}:80
+    - ${HTTPS_PORT:-443}:443
     volumes:
     - ./Caddyfile:/etc/caddy/Caddyfile
