--- a/gitea/docker-compose.nginx.yml
+++ b/gitea/docker-compose.nginx.yml
@@ -7,8 +7,8 @@ services:
     env_file:
     - ./.env
     ports:
-    - ${WEB_HTTP_PORT}:80
-    - ${WEB_HTTPS_PORT}:443
+    - ${HTTP_PORT:-80}:80
+    - ${HTTPS_PORT:-443}:443
     volumes:
     - .:/var/www:cached
     - ./nginx.conf:/etc/nginx/nginx.conf
