feat: 新增一些 compose
- 添加 stalwart 邮件服务器系统
- 移除 mrdoc 文档服务
- 优化 .env 到 docker-compose.override.yml

--- a/joplin/.env
+++ b/joplin/.env
@@ -1,12 +1,15 @@
-APP_BASE_URL=https://joplin.mydomain.com
+# app
 APP_PORT=22300
+APP_BASE_URL=https://joplin.mydomain.com
 DB_CLIENT=pg
 POSTGRES_PASSWORD=joplin
-POSTGRES_USER=joplin
-POSTGRES_DB=joplin
 POSTGRES_DATABASE=joplin
+POSTGRES_USER=joplin
 POSTGRES_PORT=5432
 POSTGRES_HOST=postgres
+
+# db
+POSTGRES_DB=joplin
 
 # CUSTOM
 TZ=Asia/Shanghai
