--- a/meilisearch/docker-compose.yml
+++ b/meilisearch/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     image: getmeili/meilisearch:latest
     container_name: meilisearch
     restart: unless-stopped
-    env_file:
-    - ./.env
     volumes:
-    - /srv/meili_data:/meili_data
+    - ./data:/meili_data
     ports:
-    - ${SERV_PORT}:7700
+    - ${SERV_PORT:-7700}:7700
