--- a/hedgedoc/.env
+++ b/hedgedoc/.env
@@ -1,21 +1,9 @@
-# General settings
-HD_BASE_URL="https://example.com"
-# 密钥。使用 `pwgen -s 64` 生成，每行一个值
-HD_SESSION_SECRET="<HD_SESSION_SECRET>"
+HD_BASE_URL=https://example.com
+HD_INTERNAL_API_URL=http://backend:3000
 
-# Database settings
-HD_DATABASE_TYPE="postgres"
-HD_DATABASE_HOST="db"
-HD_DATABASE_PORT="5432"
-HD_DATABASE_NAME="hedgedoc"
-HD_DATABASE_USER="hedgedoc"
-# 密钥。使用 `pwgen -s 64` 生成，每行一个值
-HD_DATABASE_PASS="<HD_DATABASE_PASS>"
+POSTGRES_USER=hedgedoc
+POSTGRES_PASSWORD=hedgedoc
+POSTGRES_DB=hedgedoc
 
-# Uploads
-HD_MEDIA_BACKEND="filesystem"
-HD_MEDIA_BACKEND_FILESYSTEM_UPLOAD_PATH="uploads/"
-
-# Auth
-HD_AUTH_LOCAL_ENABLE_LOGIN="true"
-HD_AUTH_LOCAL_ENABLE_REGISTER="true"
+BACKEND_PORT=3000
+FRONTEND_PORT=3001
