--- a/hedgedoc/docker-compose.yml
+++ b/hedgedoc/docker-compose.yml
@@ -2,25 +2,18 @@
 services:
   backend:
     image: ghcr.io/hedgedoc/hedgedoc/backend:develop
-    volumes:
-    - ./.env:/usr/src/app/backend/.env
-    - ./hedgedoc_uploads:/usr/src/app/backend/uploads
     ports:
-    - 39020:3000
+    - ${BACKEND_PORT:-3000}:3000
+    volumes:
+    - ./backend.env:/usr/src/app/backend/.env
+    - ./data/uploads:/usr/src/app/backend/uploads
 
   frontend:
     image: ghcr.io/hedgedoc/hedgedoc/frontend:develop
-    environment:
-      HD_BASE_URL: ${HD_BASE_URL}
-      HD_INTERNAL_API_URL: http://backend:3000
     ports:
-    - 39021:3001
+    - ${FRONTEND_PORT:-3001}:3001
 
   db:
     image: postgres:16
-    environment:
-      POSTGRES_USER: ${HD_DATABASE_USER}
-      POSTGRES_PASSWORD: ${HD_DATABASE_PASS}
-      POSTGRES_DB: ${HD_DATABASE_NAME}
     volumes:
-    - ./hedgedoc_postgres:/var/lib/postgresql/data
+    - ./data/postgres:/var/lib/postgresql/data
