--- a/mamoto/docker-compose.yml
+++ b/mamoto/docker-compose.yml
@@ -11,11 +11,9 @@ services:
     image: matomo:latest
     container_name: matomo
     restart: unless-stopped
-    env_file:
-    - ./.env
     volumes:
     - ./html:/var/www/html
     ports:
-    - ${PORT}:80
+    - ${SERV_PORT:-80}:80
     networks:
     - database
