--- a/mindoc/docker-compose.yml
+++ b/mindoc/docker-compose.yml
@@ -3,16 +3,14 @@
 
 services:
   mindoc:
-    image: registry.cn-hangzhou.aliyuncs.com/mindoc-org/mindoc:v2.1-beta.6
+    image: ghcr.io/forkdo/mindoc:latest
     container_name: mindoc
     privileged: false
     restart: unless-stopped
-    env_file:
-    - ./.env
-    volumes:
-    - ./mindoc:/mindoc-sync-host
     ports:
     - ${SERV_PORT:-8181}:8181
+    volumes:
+    - ./data:/mindoc-sync-host
     dns:
     - 223.5.5.5
     - 223.6.6.6
