--- a/minio/distributed/docker-compose.yml
+++ b/minio/distributed/docker-compose.yml
@@ -1,25 +1,21 @@
 ---
-# https://github.com/minio/minio/tree/master/docs/orchestration/docker-compose
 version       : '3.7'
 
 # Settings and configurations that are common for all containers
 x-minio-common: &minio-common
-  image: quay.io/minio/minio:RELEASE.2022-03-08T22-28-51Z
+  image: quay.io/minio/minio:RELEASE.2025-02-18T16-25-55Z
   command: server --console-address ":9001" http://minio{1...4}/data{1...2}
   expose:
   - '9000'
   - '9001'
-  #environment:
-    #MINIO_ACCESS_KEY: ACCESS-KEY
-    #MINIO_SECRET_KEY: SECRET-KEY
-    #MINIO_ROOT_USER: USER
-    #MINIO_ROOT_PASSWORD: PASSWORD
-    #MINIO_SERVER_URL: http://localhost:9000
+  # environment:
+    # MINIO_ROOT_USER: minioadmin
+    # MINIO_ROOT_PASSWORD: minioadmin
   healthcheck:
-    test: [CMD, curl, -f, http://localhost:9000/minio/health/live]
-    interval: 30s
-    timeout: 20s
-    retries: 3
+    test: [CMD, mc, ready, local]
+    interval: 5s
+    timeout: 5s
+    retries: 5
 
 # starts 4 docker containers running minio server instances.
 # using nginx reverse proxy, load balancing, you can access
