--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     image: mysql:latest
     container_name: mysql
     restart: unless-stopped
-    env_file:
-    - ./.env
     volumes:
     - ./data:/var/lib/mysql
     ports:
-    - ${MYSQL_PORT}:3306
+    - ${MYSQL_PORT:-3306}:3306
