feat: 使用 docker-composer.override.yml 覆盖 .env

--- a/phpmyadmin/docker-compose.yml
+++ b/phpmyadmin/docker-compose.yml
@@ -5,7 +5,5 @@ services:
     image: phpmyadmin:latest
     container_name: phpmyadmin
     restart: unless-stopped
-    env_file:
-    - ./.env
     ports:
-    - ${PHPMYADMIN_PORT}:80
+    - ${SERV_PORT:-80}:80
