--- a/sonic/docker-compose.yml
+++ b/sonic/docker-compose.yml
@@ -6,10 +6,9 @@ services:
     image: valeriansaliou/sonic:latest
     container_name: sonic
     restart: unless-stopped
-    env_file:
-    - ./.env
+    ports:
+    - ${SERV_PORT:-1491}:1491
     volumes:
     - ./config.cfg:/etc/sonic.cfg
     - /srv/sonic/store/:/var/lib/sonic/store/
-    ports:
-    - ${SERV_PORT}:1491
+
