--- a/pgadmin/docker-compose.yml
+++ b/pgadmin/docker-compose.yml
@@ -6,7 +6,5 @@ services:
     image: dpage/pgadmin4
     container_name: pgadmin
     restart: unless-stopped
-    env_file:
-    - ./.env
     ports:
-    - ${PGADMIN_PORT}:80
+    - ${SERV_PORT:-80}:80
