--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     image: postgres:latest
     container_name: postgres
     restart: unless-stopped
-    env_file:
-    - ./.env
     ports:
-    - ${PGSQL_PORT}:5432
+    - ${SERV_PORT:-5432}:5432
     volumes:
     - ./data:/var/lib/postgresql/data
