--- a/qinglong/docker-compose.yml
+++ b/qinglong/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     image: whyour/qinglong:latest
     container_name: qinglong
     restart: unless-stopped
-    env_file:
-    - ./.env
+    ports:
+    - ${SERV_PORT:-5700}:5700
     volumes:
     - ./data:/ql/data
-    ports:
-    - ${QINGLONG_PORT}:5700
