--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     image: redis:latest
     container_name: redis
     restart: unless-stopped
-    env_file:
-    - ./.env
     volumes:
     - ./data:/data
     ports:
-    - ${REDIS_PORT}:6379
+    - ${SERV_PORT:-6379}:6379
