--- a/remark42/docker-compose.yml
+++ b/remark42/docker-compose.yml
@@ -4,12 +4,10 @@ services:
     image: umputun/remark42:latest
     container_name: remark42
     restart: unless-stopped
-    env_file:
-    - ./.env
     volumes:
     - ./data:/srv/var
     ports:
-    - ${SERV_PORT}:8080
+    - ${SERV_PORT:-8080}:8080
 
     logging:
       driver: json-file
