--- a/rsshub/.env
+++ b/rsshub/.env
@@ -1,2 +1,8 @@
+NODE_ENV=production
+CACHE_TYPE=redis
+REDIS_URL=redis://redis:6379/
+PUPPETEER_WS_ENDPOINT=ws://browserless:3000
+
 # CUSTOM
+TZ=Asia/Shanghai
 SERV_PORT=1200
