--- a/swagger/docker-compose.yml
+++ b/swagger/docker-compose.yml
@@ -4,9 +4,7 @@ services:
     image: swaggerapi/swagger-ui:latest
     container_name: swagger
     restart: unless-stopped
-    env_file:
-    - ./.env
     ports:
-    - ${SWAGGER_PORT}:8080
+    - ${SERV_PORT:-8080}:8080
     volumes:
     - ./conf:/app
