--- a/transfer/docker-compose.yml
+++ b/transfer/docker-compose.yml
@@ -6,8 +6,6 @@ services:
     image: dutchcoders/transfer.sh:latest
     container_name: transfer
     restart: unless-stopped
-    env_file:
-    - ./.env
     ports:
-    - ${SERV_PORT}:8080
+    - ${SERV_PORT:-8080}:8080
     command: [--provider, local, --basedir, /tmp/]
