--- a/xunsearch/docker-compose.yml
+++ b/xunsearch/docker-compose.yml
@@ -6,10 +6,8 @@ services:
     image: hightman/xunsearch:latest
     container_name: xunsearch
     restart: unless-stopped
-    env_file:
-    - ./.env
+    ports:
+    - ${SERV_PORT:-8383}:8383
+    - ${SERV_PORT_1:-8384}:8384
     volumes:
     - ./data:/usr/local/xunsearch/data
-    ports:
-    - ${SERV_PORT}:8383
-    - ${SERV_PORT_1}:8384
