--- a/vaultwarden-backup/docker-compose.override.yml
+++ b/vaultwarden-backup/docker-compose.override.yml
@@ -1,39 +1,11 @@
 ---
-# https://github.com/ttionya/vaultwarden-backup
-version        : '3'
-
-x-backup-common: &backup-common
-  image: ttionya/vaultwarden-backup:latest
-  restart: unless-stopped
-  volumes:
-  - /srv/vaultwarden:/bitwarden/data/
-  - /srv/vaultwarden-backup:/config/
-
-services       :
+services:
   backup1:
-    <<: *backup-common
     env_file:
     - ./.env
 
 ## 多重备份
 #  backup2:
 #    <<: *backup-common
-#    environment:
-#        TZ: Asia/Shanghai
-#        RCLONE_REMOTE_NAME: ${B2_REMOTE_NAME}
-#        RCLONE_REMOTE_DIR: ${B2_REMOTE_DIR}
-#        RCLONE_GLOBAL_FLAG: ${RCLONE_GLOBAL_FLAG}
-#        CRON: ${B2_CRON}
-#   ZIP_ENABLE: 'TRUE'
-#        ZIP_PASSWORD: ${ZIP_PASSWORD}
-#   ZIP_TYPE: 'zip'
-#   BACKUP_FILE_DATE_SUFFIX: ''
-#   BACKUP_KEEP_DAYS: 0
-#    PING_URL: ${PING_URL}[${B2_REMOTE_NAME}]
-#   MAIL_SMTP_ENABLE: 'FALSE'
-#   MAIL_SMTP_VARIABLES: ''
-#   MAIL_TO: ''
-#   MAIL_WHEN_SUCCESS: 'TRUE'
-#   MAIL_WHEN_FAILURE: 'TRUE'
-#   TIMEZONE: 'UTC'
-#
+    # env_file:
+    # - ./.env
