feat: 添加 croc 服务

--- a/acme/docker-compose.yml
+++ b/acme/docker-compose.yml
@@ -3,7 +3,7 @@
 
 services:
   acme:
-    image: neilpang/acme.sh
+    image: neilpang/acme.sh:latest
     container_name: acme.sh
     restart: unless-stopped
     volumes:
