fix(croc): 修复部署失败的问题

--- a/croc/docker-compose.yml
+++ b/croc/docker-compose.yml
@@ -7,4 +7,5 @@ services:
     container_name: croc
     restart: unless-stopped
     ports:
-    - ${SERV_PORT:-9009-9013}:9009-9013
+    - 9009-9013:9009-9013
+    command: [relay]
