feat: emqx 支持 TLS / WSS

--- a/emqx/.env
+++ b/emqx/.env
@@ -1,8 +1,27 @@
-MQTT_PORT=1883
+TCP_PORT=1883
+SSL_PORT=8883
 WS_PORT=8083
-HTTP_PORT=8084
-MQTTS_PORT=8883
+WSS_PORT=8084
 DASH_PORT=18083
+
+# EMQX
+EMQX_HOST=
+
+# TLS
+#EMQX_LISTENERS__SSL__DEFAULT__BIND=0.0.0.0:8883
+#EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__KEYFILE=/etc/emqx/certs/emqx.key
+#EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__CERTFILE=/etc/emqx/certs/emqx.cer
+#EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__CACERTFILE=
+#EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__VERIFY=verify_none
+#EMQX_LISTENERS__SSL__DEFAULT__SSL_OPTIONS__FAIL_IF_NO_PEER_CERT=false
+
+# WSS
+#EMQX_LISTENERS__WSS__DEFAULT__BIND=0.0.0.0:8084
+#EMQX_LISTENERS__WSS__DEFAULT__MAX_CONNECTIONS=1024000
+#EMQX_LISTENERS__WSS__DEFAULT__WEBSOCKET__MQTT_PATH="/mqtt"
+#EMQX_LISTENERS__WSS__DEFAULT__SSL_OPTIONS__CERTFILE=/etc/emqx/certs/emqx.cer
+#EMQX_LISTENERS__WSS__DEFAULT__SSL_OPTIONS__KEYFILE=/etc/emqx/certs/emqx.key
+#EMQX_LISTENERS__WSS__DEFAULT__SSL_OPTIONS__CACERTFILE=
 
 # CUSTOM
 TZ=Asia/Shanghai
