feat: 审阅至 gitea

--- a/emqx/.env
+++ b/emqx/.env
@@ -1,10 +1,14 @@
+# PORTS
 TCP_PORT=1883
 SSL_PORT=8883
 WS_PORT=8083
 WSS_PORT=8084
-DASH_PORT=18083
+HTTP_PORT=18083
+HTTPS_PORT=18084
 
 # EMQX
+EMQX_UID=0
+EMQX_GID=0
 EMQX_HOST=
 
 # TLS
@@ -22,6 +26,11 @@ EMQX_HOST=
 #EMQX_LISTENERS__WSS__DEFAULT__SSL_OPTIONS__CERTFILE=/etc/emqx/certs/emqx.cer
 #EMQX_LISTENERS__WSS__DEFAULT__SSL_OPTIONS__KEYFILE=/etc/emqx/certs/emqx.key
 #EMQX_LISTENERS__WSS__DEFAULT__SSL_OPTIONS__CACERTFILE=
+
+# DASHBOARD
+#EMQX_DASHBOARD__LISTENERS__HTTPS__BIND=0.0.0.0:18084
+#EMQX_DASHBOARD__LISTENERS__HTTPS__SSL_OPTIONS__CERTFILE=/etc/emqx/certs/emqx.cer 
+#EMQX_DASHBOARD__LISTENERS__HTTPS__SSL_OPTIONS__KEYFILE=/etc/emqx/certs/emqx.key
 
 # CUSTOM
 TZ=Asia/Shanghai
