--- a/gitea/.env
+++ b/gitea/.env
@@ -12,9 +12,11 @@ POSTGRES_USER=gitea
 POSTGRES_PASSWORD=gitea
 POSTGRES_DB=gitea
 
-# CUSTOM
-TZ=Asia/Shanghai
+# inner setting
 GITEA_HTTP_PORT=3000
 GITEA_SSL_PORT=22
-HTTP_PORT=80
-HTTPS_PORT=443
+
+# CUSTOM
+TZ=Asia/Shanghai
+WEB_HTTP_PORT=80
+WEB_HTTPS_PORT=443
