--- a/gitea/compose.yml
+++ b/gitea/compose.yml
@@ -3,20 +3,48 @@
 services:
   server:
     image: gitea/gitea:latest
-    container_name: gitea
     restart: unless-stopped
     ports:
     - ${GITEA_HTTP_PORT:-3000}:3000
     - ${GITEA_SSL_PORT:-22}:22
     volumes:
-    - ./gitea:/data
+    - ./data/gitea:/data
     - /etc/timezone:/etc/timezone:ro
     - /etc/localtime:/etc/localtime:ro
     depends_on:
     - db
 
   db:
-    image: postgres:16
+    image: postgres:17
     restart: unless-stopped
     volumes:
-    - ./postgres:/var/lib/postgresql/data
+    - ./data/postgres:/var/lib/postgresql/data
+
+  caddy:
+    image: caddy:latest
+    restart: unless-stopped
+    ports:
+    - ${WEB_HTTP_PORT:-80}:80
+    - ${WEB_HTTPS_PORT:-443}:443
+    volumes:
+    - ./Caddyfile:/etc/caddy/Caddyfile
+    depends_on:
+    - server
+    profiles:
+    - caddy
+
+  nginx:
+    image: nginx:alpine
+    restart: unless-stopped
+    ports:
+    - ${WEB_HTTP_PORT:-80}:80
+    - ${WEB_HTTPS_PORT:-443}:443
+    volumes:
+    - .:/var/www:cached
+    - ./nginx.conf:/etc/nginx/nginx.conf
+    - ./ssl:/etc/nginx/ssl
+    command: nginx
+    depends_on:
+    - server
+    profiles:
+    - nginx
