--- a/gitea/nginx.conf
+++ b/gitea/nginx.conf
@@ -33,15 +33,16 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        http2 on;
 
         server_name localhost;
         root /var/www/public;
         index index.html index.htm;
 
         location / {
-            proxy_pass http://server:3000;
+            proxy_pass http://server:80;
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
