--- a/minio/single/.env
+++ b/minio/single/.env
@@ -2,8 +2,11 @@ MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_BROWSER_REDIRECT_URL=https://console.yourdomain.com
 MINIO_SERVER_URL=https://oss.yourdomain.com
+MINIO_PUBLIC_LISTING=off
 
 # image version
 MINIO_IMAGE_VERSION="RELEASE.2022-12-02T19-19-22Z"
 MINIO_SERVER_PORT="127.0.0.1:9000"
 MINIO_CONSOLE_PORT="127.0.0.1:9001"
+
+TZ="Asia/Shanghai"
