--- a/mariadb/compose.yml
+++ b/mariadb/compose.yml
@@ -7,6 +7,6 @@ services:
     container_name: mariadb
     restart: unless-stopped
     ports:
-    - ${SERV_PORT:-3306}:3306
+    - ${MARIADB_PORT:-3306}:3306
     volumes:
     - ./data:/var/lib/mysql
