--- a/postgres/compose.yml
+++ b/postgres/compose.yml
@@ -7,6 +7,6 @@ services:
     container_name: postgres
     restart: unless-stopped
     ports:
-    - ${SERV_PORT:-5432}:5432
+    - ${POSTGRES_PORT:-5432}:5432
     volumes:
     - ./data:/var/lib/postgresql/data
