--- a/vaultwarden/.env
+++ b/vaultwarden/.env
@@ -1,12 +1,15 @@
+DOMAIN=https://vault.example.com # or https://vault.example.com/base-dir
+
 WEBSOCKET_ENABLED=true  # Enable WebSocket notifications.
+
 SMTP_HOST=<smtp.domain.tld>
 SMTP_FROM=<vaultwarden@domain.tld>
 SMTP_PORT=465 # 465, StartTLS(587)
-SMTP_SECURITY=off
-SMTP_SSL=false # StartTLS(true)
-SMTP_EXPLICIT_TLS=true # StartTLS(false)
+SMTP_SECURITY=off # 465 force_tls, 587/25 starttls, off
 SMTP_USERNAME=<username>
 SMTP_PASSWORD=<password>
+
+SIGNUPS_ALLOWED=false # registration disabled
 
 # CUSTOM
 TZ=Asia/Shanghai
