fix(asciinema): 修复邮件无法发送的问题

--- a/asciinema/.env
+++ b/asciinema/.env
@@ -23,7 +23,7 @@ SMTP_PASSWORD=<SMTP_PASSWORD> # 必填，邮箱密码
 
 # SMTP 加密配置
 SMTP_TLS=always # 加密方式
-SMTP_ALLOWED_TLS_VERSIONS=tlsv1.2 # 允许的 TLS 版本
+SMTP_ALLOWED_TLS_VERSIONS=tlsv1.2,tlsv1.3 # 允许的 TLS 版本
 
 # SMTP 认证配置
 SMTP_AUTH=always # 验证方式
