--- a/ferron/compose.yml
+++ b/ferron/compose.yml
@@ -3,22 +3,23 @@
 
 services:
   ferron:
-    image: ferronserver/ferron:latest
+    image: ferronserver/ferron:2
     restart: unless-stopped
     volumes:
     - ./data/html:/var/www/ferron
+    - ./ferron.kdl:/etc/ferron.kdl     # Ferron configuration file
     ports:
     - ${SERV_PORT:-80}:80
 
   # Ferron container
   ferron-server:
-    image: ferronserver/ferron:latest
+    image: ferronserver/ferron:2
     restart: unless-stopped
     ports:
     - 80:80
     - 443:443
     volumes:
-    - ./ferron.yaml:/etc/ferron.yaml     # Ferron configuration file
+    - ./ferron.kdl:/etc/ferron.kdl     # Ferron configuration file
     - ./data/ferron-acme:/var/cache/acme-cache     # This volume is needed for persistent automatic TLS cache, otherwise the web server will obtain a new certificate on each restart
     depends_on:
       ferron-acme-change-vol-ownership:
