--- a/file-downloader/.env
+++ b/file-downloader/.env
@@ -1,17 +1,18 @@
 TZ=Asia/Shanghai
 
-MQTT_BROKER="broker.emqx.io"
-MQTT_PORT=1883
-QOS_LEVEL=2
+BROKER="broker.emqx.io"
+PORT=1883
+QOS=2
 KEEPALIVE=60
-MQTT_TOPIC_SUBSCRIBE="video/download/request"
-MQTT_TOPIC_PUBLISH="video/download/complete"
-MQTT_CLIENT_ID="video"
+TOPIC_SUBSCRIBE="file/download/request"
+TOPIC_PUBLISH="file/download/complete"
+CLIENT_ID="file"
 DOWNLOAD_DIR="downloads"
 DOWNLOAD_PREFIX_URL=""
-MQTT_USERNAME=""
-MQTT_PASSWORD=""
+USERNAME=""
+PASSWORD=""
 
+ARIA2_SERVER_ENABLE=0
 ARIA2_RPC_ENABLE=0
 ARIA2_RPC_HOST="http://localhost"
 ARIA2_RPC_PORT=6800
