feat: 添加 backup.sh 备份脚本

--- a/linkding/.env
+++ b/linkding/.env
@@ -1,3 +1,28 @@
 # CUSTOM
 TZ=Asia/Shanghai
 SERV_PORT=9090
+
+# LD_SUPERUSER_NAME=
+# LD_SUPERUSER_PASSWORD=
+# LD_DISABLE_BACKGROUND_TASKS=
+# LD_DISABLE_URL_VALIDATION=
+# LD_REQUEST_MAX_CONTENT_LENGTH=
+# LD_REQUEST_TIMEOUT=
+# LD_SERVER_HOST=
+# LD_SERVER_PORT=
+# LD_CONTEXT_PATH=
+# LD_ENABLE_AUTH_PROXY=
+# LD_ENABLE_OIDC=
+# LD_CSRF_TRUSTED_ORIGINS=
+# LD_LOG_X_FORWARDED_FOR=
+# LD_DB_ENGINE=
+# LD_DB_DATABASE=
+# LD_DB_USER=
+# LD_DB_PASSWORD=
+# LD_DB_HOST=
+# LD_DB_PORT=
+# LD_DB_OPTIONS=
+# LD_FAVICON_PROVIDER=
+# LD_SINGLEFILE_TIMEOUT_SEC=
+# LD_SINGLEFILE_OPTIONS=
+# LD_DISABLE_REQUEST_LOGS=
