--- a/opengist/.env
+++ b/opengist/.env
@@ -4,4 +4,41 @@ SERV_PORT=6157
 SSH_PORT=2222
 
 # https://opengist.io/docs/configuration/cheat-sheet.html
+# OG_LOG_LEVEL=warn
+# OG_LOG_OUTPUT=stdout,file
+# OG_EXTERNAL_URL=none
+# OG_OPENGIST_HOME=home directory
+# OG_SECRET_KEY=randomized 32 bytes
+OG_DB_URI=opengist.db
+# OG_INDEX=bleve
+# OG_MEILI_HOST=none
+# OG_MEILI_API_KEY=none
+# OG_GIT_DEFAULT_BRANCH=none
+# OG_SQLITE_JOURNAL_MODE=WAL
+# OG_HTTP_HOST=0.0.0.0
+# OG_HTTP_PORT=6157
+# OG_HTTP_GIT_ENABLED=true
+# OG_METRICS_ENABLED=false
 # OG_SSH_GIT_ENABLED=false
+# OG_SSH_HOST=0.0.0.0
+# OG_SSH_PORT=2222
+# OG_SSH_EXTERNAL_DOMAIN=none
+# OG_SSH_KEYGEN_EXECUTABLE=ssh-keygen
+# OG_GITHUB_CLIENT_KEY=none
+# OG_GITHUB_SECRET=none
+# OG_GITLAB_CLIENT_KEY=none
+# OG_GITLAB_SECRET=none
+# OG_GITLAB_URL=https://gitlab.com/
+# OG_GITLAB_NAME=GitLab
+# OG_GITEA_CLIENT_KEY=none
+# OG_GITEA_SECRET=none
+# OG_GITEA_URL=https://gitea.com/
+# OG_GITEA_NAME=Gitea
+# OG_OIDC_PROVIDER_NAME=none
+# OG_OIDC_CLIENT_KEY=none
+# OG_OIDC_SECRET=none
+# OG_OIDC_DISCOVERY_URL=none
+# OG_CUSTOM_NAME=none
+# OG_CUSTOM_LOGO=none
+# OG_CUSTOM_FAVICON=none
+# OG_CUSTOM_STATIC_LINK_#_(PATH,NAME)=none
