--- a/hoppscotch/compose.yml
+++ b/hoppscotch/compose.yml
@@ -14,11 +14,22 @@ services:
     - aio
     - init
 
+  init:
+    image: hoppscotch/hoppscotch:latest
+    restart: unless-stopped
+    entrypoint: [ "pnpm", "dlx", "prisma", "migrate", "deploy" ]
+    depends_on:
+    - postgres
+    profiles:
+    - init
+
   aio:
     image: hoppscotch/hoppscotch:latest
     restart: unless-stopped
     ports:
     - ${AIO_PORT:-8080}:80
+    depends_on:
+    - postgres    
     profiles:
     - aio
 
