feat: 新增 claude-code-router 和 rclone-backup

--- a/opengist/.env
+++ b/opengist/.env
@@ -13,7 +13,7 @@ OG_DB_URI=opengist.db
 # OG_INDEX=bleve
 # OG_MEILI_HOST=none
 # OG_MEILI_API_KEY=none
-# OG_GIT_DEFAULT_BRANCH=none
+OG_GIT_DEFAULT_BRANCH=main
 # OG_SQLITE_JOURNAL_MODE=WAL
 # OG_HTTP_HOST=0.0.0.0
 # OG_HTTP_PORT=6157
