--- a/ferron/compose.yml
+++ b/ferron/compose.yml
@@ -1,10 +1,12 @@
 ---
 # https://hub.docker.com/r/ferronserver/ferron
+# https://ferron.sh/docs/installation/docker
 
 services:
   ferron:
-    image: ferronserver/ferron:2
+    image: ferronserver/ferron:2-alpine
     restart: unless-stopped
+    user: "0:0"
     volumes:
     - ./data/html:/var/www/ferron
     - ./ferron.kdl:/etc/ferron.kdl     # Ferron configuration file
@@ -13,27 +15,13 @@ services:
 
   # Ferron container
   ferron-server:
-    image: ferronserver/ferron:2
+    image: ferronserver/ferron:2-alpine
     restart: unless-stopped
     ports:
     - 80:80
     - 443:443
     volumes:
     - ./ferron.kdl:/etc/ferron.kdl     # Ferron configuration file
-    - ./data/ferron-acme:/var/cache/acme-cache     # This volume is needed for persistent automatic TLS cache, otherwise the web server will obtain a new certificate on each restart
-    depends_on:
-      ferron-acme-change-vol-ownership:
-        condition: service_completed_successfully
-    profiles:
-    - acme
-
-  # Container to change ownership of the volume, necessary for the ACME cache to work properly
-  ferron-acme-change-vol-ownership:
-    image: alpine
-    restart: unless-stopped
-    user: root
-    volumes:
-    - ./data/ferron-acme:/tmp/change-ownership
-    command: chown nobody:nogroup /tmp/change-ownership
+    - ./data/ferron-acme:/var/cache/ferron-acme" # This volume is needed for persistent automatic TLS cache, otherwise the web server will obtain a new certificate on each restart
     profiles:
     - acme
