--- a/adminer/compose.yml
+++ b/adminer/compose.yml
@@ -6,6 +6,7 @@ services:
   adminer:
     image: adminer:latest
     container_name: adminer
+    hostname: adminer
     restart: unless-stopped
     ports:
     - ${SERV_PORT:-8080}:8080
