--- a/bark/compose.yml
+++ b/bark/compose.yml
@@ -5,6 +5,7 @@ services:
   bark:
     image: finab/bark-server:latest
     container_name: bark
+    hostname: bark
     restart: unless-stopped
     ports:
     - ${BARK_PORT:-8080}:8080
