--- a/dufs/compose.yml
+++ b/dufs/compose.yml
@@ -5,6 +5,7 @@ services:
   dufs:
     image: sigoden/dufs:latest
     container_name: dufs
+    hostname: dufs
     restart: unless-stopped
     ports:
     - ${SERV_PORT:-5000}:5000
