--- a/emqx/compose.yml
+++ b/emqx/compose.yml
@@ -5,6 +5,7 @@ services:
   emqx:
     image: emqx/emqx:latest
     container_name: emqx
+    hostname: emqx
     restart: unless-stopped
     user: $EMQX_UID:$EMQX_GID
     ports:
