--- a/file-downloader/compose.yml
+++ b/file-downloader/compose.yml
@@ -3,6 +3,7 @@ services:
   file-downloader:
     image: ghcr.io/idev-sig/file-downloader:dev
     container_name: file-downloader
+    hostname: file-downloader
     restart: unless-stopped
     volumes:
     - ./downloads:/app/downloads
