--- a/hoppscotch/compose.yml
+++ b/hoppscotch/compose.yml
@@ -4,6 +4,7 @@
 services:
   postgres:
     image: postgres:latest
+    hostname: hoppscotch
     restart: unless-stopped
     ports:
     - ${POSTGRES_PORT:-5432}:5432
@@ -16,6 +17,7 @@ services:
   
   aio:
     image: hoppscotch/hoppscotch:latest
+    hostname: hoppscotch
     restart: unless-stopped
     ports:
     - ${AIO_PORT:-8080}:80
@@ -25,6 +27,7 @@ services:
 
   admin:
     image: hoppscotch/hoppscotch-admin:latest
+    hostname: hoppscotch
     restart: unless-stopped
     ports:
     - ${ADMIN_PORT:-3100}:80
@@ -33,6 +36,7 @@ services:
   
   frontend:
     image: hoppscotch/hoppscotch-frontend:latest
+    hostname: hoppscotch
     restart: unless-stopped
     ports:
     - ${FRONTEND_PORT:-3000}:80
@@ -41,6 +45,7 @@ services:
 
   backend:
     image: hoppscotch/hoppscotch-backend:latest
+    hostname: hoppscotch
     restart: unless-stopped
     ports:
     - ${BACKEND_PORT:-3170}:80
