--- a/ferron/compose.yml
+++ b/ferron/compose.yml
@@ -3,7 +3,7 @@
 # https://ferron.sh/docs/installation/docker
 
 services:
-  ferron:
+  server:
     image: ferronserver/ferron:2-alpine
     restart: unless-stopped
     user: 0:0
@@ -11,10 +11,10 @@ services:
       - ./data/html:/var/www/ferron
       - ./ferron.kdl:/etc/ferron.kdl   # Ferron configuration file
     ports:
-      - ${SERV_PORT:-80}:80
+      - ${SERV_PORT:-8080}:80
 
   # Ferron container
-  ferron-server:
+  ferron:
     image: ferronserver/ferron:2-alpine
     restart: unless-stopped
     ports:
