--- a/shortener/compose.yml
+++ b/shortener/compose.yml
@@ -5,6 +5,7 @@ services:
   backend:
     image: jetsung/shortener-server:latest
     restart: unless-stopped
+    hostname: shortener
     ports:
       - ${BACKEND_PORT:-8081}:8081
     volumes:
@@ -24,5 +25,6 @@ services:
   frontend:
     image: jetsung/shortener-frontend:latest
     restart: unless-stopped
+    hostname: shortener
     ports:
       - ${FRONTEND_PORT:-8080}:8080
