--- a/gotify/compose.override.yaml
+++ b/gotify/compose.override.yaml
@@ -1,11 +1,12 @@
 services:
   gotify:
-    env_file:
-      - ./.env
     ports: !override
       - ${SERV_PORT:-80}:80
+    volumes:
+      - ./data/gotify:/app/data
+
   igotify:
-    env_file:
-      - ./.env
+    volumes:
+      - ./data/igotify:/app/data
     profiles:
       - igotify
