--- a/mamoto/compose.yaml
+++ b/mamoto/compose.yaml
@@ -2,10 +2,6 @@
 # https://hub.docker.com/_/matomo/
 # https://github.com/matomo-org/docker
 
-networks:
-  database:
-    external: true
-
 services:
   matomo:
     image: matomo:latest
@@ -15,9 +11,12 @@ services:
     env_file:
       - path: ./.env
         required: false
-    volumes:
-      - ./html:/var/www/html
     ports:
       - 80:80
-    networks:
-      - database
+
+  db:
+    image: mariadb:latest
+    restart: unless-stopped
+    env_file:
+      - path: ./.env
+        required: false
