--- a/mindoc/.env
+++ b/mindoc/.env
@@ -1,7 +1,11 @@
+# CUSTOM
+TZ=Asia/Shanghai
+SERV_PORT=8181
+
 MINDOC_RUN_MODE=prod
-MINDOC_DB_ADAPTER=mysql
+MINDOC_DB_ADAPTER=sqlite3
+MINDOC_DB_DATABASE=./database/mindoc.db
 MINDOC_DB_HOST=mariadb
-MINDOC_DB_DATABASE=mindoc
 MINDOC_DB_USERNAME=root
 MINDOC_DB_PASSWORD=mindoc2022
 MINDOC_CACHE=true
@@ -11,7 +15,3 @@ MINDOC_BASE_URL=
 MINDOC_CDN_IMG_URL=
 MINDOC_CDN_CSS_URL=
 MINDOC_CDN_JS_URL=
-
-# CUSTOM
-TZ=Asia/Shanghai
-SERV_PORT=127.0.0.1:8181
