--- a/mysql/compose.override.yaml
+++ b/mysql/compose.override.yaml
@@ -1,4 +1,6 @@
 services:
   mysql:
     ports: !override
-      - ${MYSQL_PORT:-3306}:3306
+      - ${SERV_PORT:-3306}:3306
+    volumes:
+      - ./data:/var/lib/mysql
