--- a/ntfy/.env
+++ b/ntfy/.env
@@ -1,10 +1,31 @@
-# 登录权限
-NTFY_AUTH_FILE=/var/lib/ntfy/auth.db
-NTFY_AUTH_DEFAULT_ACCESS=deny-all
-
-# 代理支持
-NTFY_BEHIND_PROXY=true
-
 # CUSTOM
 TZ=Asia/Shanghai
+SERV_PORT=80
 SERV_PORT=8080
+
+# ntfy 服务的基础 URL。
+NTFY_BASE_URL=http://ntfy.example.com
+# 缓存文件的路径。
+NTFY_CACHE_FILE=/var/lib/ntfy/cache.db
+# 认证文件的路径。
+NTFY_AUTH_FILE=/var/lib/ntfy/auth.db
+# 默认访问权限。
+NTFY_AUTH_DEFAULT_ACCESS=deny-all
+# Must escape '$' as '$$'
+NTFY_AUTH_USERS="phil:$$2a$$10$$YLiO8U21sX1uhZamTLJXHuxgVC0Z/GKISibrKCLohPgtG7yIxSk4C:admin"
+# 是否在代理后面运行。
+NTFY_BEHIND_PROXY=true
+# 附件缓存目录的路径。
+NTFY_ATTACHMENT_CACHE_DIR=/var/lib/ntfy/attachments
+# 是否启用登录。
+NTFY_ENABLE_LOGIN=true
+# 上游 ntfy 服务的基础 URL。
+NTFY_UPSTREAM_BASE_URL=https://ntfy.sh
+# Web Push 公钥。
+NTFY_WEB_PUSH_PUBLIC_KEY=<public_key>
+# Web Push 私钥。
+NTFY_WEB_PUSH_PRIVATE_KEY=<private_key>
+# Web Push 文件的路径。
+NTFY_WEB_PUSH_FILE=/var/lib/ntfy/webpush.db
+# Web Push 邮箱地址。
+NTFY_WEB_PUSH_EMAIL_ADDRESS=<email>
