--- a/ferron/compose.yaml
+++ b/ferron/compose.yaml
@@ -1,30 +1,31 @@
 ---
 # https://hub.docker.com/r/ferronserver/ferron
-# https://ferron.sh/docs/installation/docker
+
+x-ferron-common: &ferron-common
+  image: ferronserver/ferron:2-alpine
+  user: 0:0
+  restart: unless-stopped
+  env_file:
+    - path: ./.env
+      required: false
+  volumes:
+    - ./ferron.kdl:/etc/ferron.kdl
 
 services:
   server:
-    image: ferronserver/ferron:2-alpine
-    restart: unless-stopped
-    env_file:
-      - path: ./.env
-        required: false
-    user: 0:0
+    <<: *ferron-common
+    ports:
+      - 80:80
     volumes:
       - ./data/html:/var/www/ferron
-      - ./ferron.kdl:/etc/ferron.kdl   # Ferron configuration file
-    ports:
-      - 8080:80
 
   # Ferron container
   ferron:
-    image: ferronserver/ferron:2-alpine
-    restart: unless-stopped
+    <<: *ferron-common
     ports:
       - 80:80
       - 443:443
     volumes:
-      - ./ferron.kdl:/etc/ferron.kdl   # Ferron configuration file
       - ./data/ferron-acme:/var/cache/ferron-acme" # This volume is needed for persistent automatic TLS cache, otherwise the web server will obtain a new certificate on each restart
     profiles:
       - acme
