--- a/hedgedoc/.env
+++ b/hedgedoc/.env
@@ -1,9 +1,22 @@
-HD_BASE_URL=https://example.com
-HD_INTERNAL_API_URL=http://backend:3000
+# CUSTOM
+TZ=Asia/Shanghai
 
-POSTGRES_USER=hedgedoc
-POSTGRES_PASSWORD=hedgedoc
-POSTGRES_DB=hedgedoc
+# General settings
+HD_BASE_URL="https://md.example.com"
+HD_SESSION_SECRET="change_me_in_production"
 
-BACKEND_PORT=3000
-FRONTEND_PORT=3001
+# Database settings
+HD_DATABASE_TYPE="postgres"
+HD_DATABASE_HOST="db"
+HD_DATABASE_PORT="5432"
+HD_DATABASE_NAME="hedgedoc"
+HD_DATABASE_USER="hedgedoc"
+HD_DATABASE_PASS="password"
+
+# Uploads
+HD_MEDIA_BACKEND="filesystem"
+HD_MEDIA_BACKEND_FILESYSTEM_UPLOAD_PATH="uploads/"
+
+# Auth
+HD_AUTH_LOCAL_ENABLE_LOGIN="true"
+HD_AUTH_LOCAL_ENABLE_REGISTER="true"
