--- a/hoppscotch/.env
+++ b/hoppscotch/.env
@@ -1,9 +1,13 @@
 # CUSTOM
 TZ=Asia/Shanghai
+
+# One
 FRONTEND_PORT=3000
 APP_PORT=3200
 ADMIN_PORT=3100
 BACKEND_PORT=3170
+
+# AIO
 AIO_PORT=8080
 
 #--------------------- PostgreSQL --------------------------------#
@@ -12,6 +16,26 @@ POSTGRES_USER=postgres
 POSTGRES_DB=hoppscotch
 POSTGRES_PORT=5432
 
+
+# https://docs.hoppscotch.io/documentation/self-host/community-edition/prerequisites#oauth
+#-----------------------OAuth Config------------------------------#
+# VITE_ALLOWED_AUTH_PROVIDERS=GOOGLE,GITHUB,MICROSOFT,EMAIL
+
+# GITHUB_CLIENT_ID=*****
+# GITHUB_CLIENT_SECRET=*****
+# GITHUB_CALLBACK_URL=http://localhost:3170/v1/auth/github/callback
+# GITHUB_SCOPE=user:email
+
+# https://docs.hoppscotch.io/guides/articles/self-host-hoppscotch-on-your-own-servers#2-2-custom-mailer-configuration
+# MAILER_SMTP_HOST=smtp.domain.com
+# MAILER_SMTP_PORT=587
+# MAILER_SMTP_SECURE=true
+# MAILER_SMTP_USER=user@domain.com
+# MAILER_SMTP_PASSWORD=pass
+# MAILER_TLS_REJECT_UNAUTHORIZED=true
+
+# https://github.com/hoppscotch/hoppscotch/blob/main/.env.example
+# https://docs.hoppscotch.io/documentation/self-host/community-edition/install-and-build#configuring-the-environment
 #-----------------------Backend Config------------------------------#
 
 # Prisma Config
@@ -32,6 +56,9 @@ DATA_ENCRYPTION_KEY=********************************
 #   bundle names like `app://{bundle-name}/`
 WHITELISTED_ORIGINS=http://localhost:3170,http://localhost:3000,http://localhost:3100,app://localhost_3200,app://hoppscotch
 
+# If true, the client’s IP address is understood as the left-most entry in the X-Forwarded-For header
+TRUST_PROXY=false
+
 #-----------------------Frontend Config------------------------------#
 
 # Base URLs
@@ -41,12 +68,15 @@ VITE_ADMIN_URL=http://localhost:3100
 
 # Backend URLs
 VITE_BACKEND_GQL_URL=http://localhost:3170/graphql
-VITE_BACKEND_WS_URL=wss://localhost:3170/graphql
+VITE_BACKEND_WS_URL=ws://localhost:3170/graphql
 VITE_BACKEND_API_URL=http://localhost:3170/v1
 
 # Terms Of Service And Privacy Policy Links (Optional)
 VITE_APP_TOS_LINK=https://docs.hoppscotch.io/support/terms
 VITE_APP_PRIVACY_POLICY_LINK=https://docs.hoppscotch.io/support/privacy
+
+# Set default to null as https://proxy.hoppscotch.io/ doesn't require an access token
+VITE_PROXYSCOTCH_ACCESS_TOKEN=
 
 # Set to `true` for subpath based access
 ENABLE_SUBPATH_BASED_ACCESS=false
