--- a/joplin/.env
+++ b/joplin/.env
@@ -1,16 +1,19 @@
+# CUSTOM
+TZ=Asia/Shanghai
+SERV_PORT=22300
+
+# db
+POSTGRES_DB=joplin
+
 # app
 APP_PORT=22300
 APP_BASE_URL=https://joplin.mydomain.com
+
 DB_CLIENT=pg
+# POSTGRES_CONNECTION_STRING=postgresql://username:password@your_joplin_postgres_server:5432/joplin
+
 POSTGRES_PASSWORD=joplin
 POSTGRES_DATABASE=joplin
 POSTGRES_USER=joplin
 POSTGRES_PORT=5432
 POSTGRES_HOST=postgres
-
-# db
-POSTGRES_DB=joplin
-
-# CUSTOM
-TZ=Asia/Shanghai
-SERV_PORT=22300
