--- a/listmonk/compose.yaml
+++ b/listmonk/compose.yaml
@@ -1,24 +1,25 @@
----
-x-db-credentials: &db-credentials
-                                                              # Use the default POSTGRES_ credentials if they're available or simply default to "listmonk"
+# All LISTMONK_* env variables also support the LISTMONK_*_FILE pattern for loading secrets from files with Docker secrets and Podman
+# eg: LISTMONK_ADMIN_USER -> LISTMONK_ADMIN_USER_FILE=/path/to/file_with_value
+
+x-db-credentials: &db-credentials                             # Use the default POSTGRES_ credentials if they're available or simply default to "listmonk"
   POSTGRES_USER: &db-user listmonk                            # for database user, password, and database name
   POSTGRES_PASSWORD: &db-password listmonk
   POSTGRES_DB: &db-name listmonk
 
-services        :
+services:
   # listmonk app
   app:
     image: listmonk/listmonk:latest
     container_name: listmonk_app
     restart: unless-stopped
     ports:
-      - 9000:9000                                             # To change the externally exposed port, change to: $custom_port:9000
+      - "9000:9000"                                           # To change the externally exposed port, change to: $custom_port:9000
     networks:
       - listmonk
     hostname: listmonk.example.com                            # Recommend using FQDN for hostname
     depends_on:
       - db
-    command: [sh, -c, ./listmonk --install --idempotent --yes --config '' && ./listmonk --upgrade --yes --config '' && ./listmonk --config '']
+    command: [sh, -c, "./listmonk --install --idempotent --yes --config '' && ./listmonk --upgrade --yes --config '' && ./listmonk --config ''"]
                                                               # --config (file) param is set to empty so that listmonk only uses the env vars (below) for config.
                                                               # --install --idempotent ensures that DB installation happens only once on an empty DB, on the first ever start.
                                                               # --upgrade automatically runs any DB migrations when a new image is pulled.
@@ -28,7 +29,7 @@ services        :
       LISTMONK_db__user: *db-user
       LISTMONK_db__password: *db-password
       LISTMONK_db__database: *db-name
-      LISTMONK_db__host: listmonk_db
+      LISTMONK_db__host: db
       LISTMONK_db__port: 5432
       LISTMONK_db__ssl_mode: disable
       LISTMONK_db__max_open: 25
@@ -45,16 +46,15 @@ services        :
   db:
     image: postgres:17-alpine
     container_name: listmonk_db
-    hostname: listmonk_db
     restart: unless-stopped
     ports:
-      - 5432:5432
+      - "127.0.0.1:5432:5432"                                 # Only bind on the local interface. To connect to Postgres externally, change this to 0.0.0.0
     networks:
       - listmonk
     environment:
       <<: *db-credentials
     healthcheck:
-      test: [CMD-SHELL, pg_isready -U listmonk]
+      test: ["CMD-SHELL", "pg_isready -U listmonk"]
       interval: 10s
       timeout: 5s
       retries: 6
@@ -63,8 +63,8 @@ services        :
         source: listmonk-data
         target: /var/lib/postgresql/data
 
-networks        :
+networks:
   listmonk:
 
-volumes         :
+volumes:
   listmonk-data:
