--- a/mamoto/.env
+++ b/mamoto/.env
@@ -1,4 +1,18 @@
-
-
-TZ="Asia/Shanghai"
+TZ=Asia/Shanghai
 SERV_PORT=80
+
+MATOMO_DATABASE_ADAPTER=mariadb
+MATOMO_DATABASE_DBNAME=matomo
+MATOMO_DATABASE_HOST=db
+MATOMO_DATABASE_PASSWORD=123456
+MATOMO_DATABASE_TABLES_PREFIX=matomo_
+MATOMO_DATABASE_USERNAME=matomo
+PHP_MEMORY_LIMIT=2048M
+
+# DB
+MARIADB_AUTO_UPGRADE=1
+MARIADB_DATABASE=example
+MARIADB_DISABLE_UPGRADE_BACKUP=1
+MARIADB_PASSWORD=example
+MARIADB_ROOT_PASSWORD=123456
+MARIADB_USER=example
