--- a/mamoto/compose.override.yaml
+++ b/mamoto/compose.override.yaml
@@ -1,4 +1,16 @@
+x-matomo-db: &matomo-db
+  MARIADB_DATABASE: ${MATOMO_DATABASE_DBNAME:-matomo}
+  MARIADB_PASSWORD: ${MATOMO_DATABASE_PASSWORD:-matomo}
+  MARIADB_USER: ${MATOMO_DATABASE_USER:-matomo}
+
 services:
   matomo:
     ports: !override
       - ${SERV_PORT:-80}:80
+    volumes:
+      - ./data/html:/var/www/html
+
+  db:
+    volumes:
+      - ./data/db:/var/lib/mysql
+    environment: *matomo-db
