--- a/mariadb/.env
+++ b/mariadb/.env
@@ -1,5 +1,11 @@
-MYSQL_ROOT_PASSWORD=123456
-
 # CUSTOM
 TZ=Asia/Shanghai
-MARIADB_PORT=3306
+SERV_PORT=3306
+
+MARIADB_AUTO_UPGRADE=1
+MARIADB_DISABLE_UPGRADE_BACKUP=1
+# MARIADB_RANDOM_ROOT_PASSWORD=1
+MARIADB_DATABASE=example
+MARIADB_PASSWORD=example
+MARIADB_ROOT_PASSWORD=123456
+MARIADB_USER=example
