--- a/memos/.env
+++ b/memos/.env
@@ -2,3 +2,10 @@
 TZ=Asia/Shanghai
 SERV_PORT=5230
 
+MEMOS_MODE=prod
+MEMOS_ADDR=0.0.0.0
+MEMOS_PORT=5230
+MEMOS_DATA=/var/opt/memos
+MEMOS_DRIVER=sqlite
+MEMOS_DSN=
+MEMOS_INSTANCE_URL=
