--- a/memos/compose.yaml
+++ b/memos/compose.yaml
@@ -3,11 +3,12 @@
 
 services:
   memos:
-    image: neosmemo/memos:latest
+    image: neosmemo/memos:stable
     container_name: memos
     hostname: memos
     restart: unless-stopped
+    env_file:
+      - path: ./.env
+        required: false
     ports:
-      - 3000:5230
-    volumes:
-      - ./data:/var/opt/memos
+      - 5230:5230
