--- a/minio/single/compose.override.yaml
+++ b/minio/single/compose.override.yaml
@@ -3,3 +3,5 @@ services:
     ports: !override
       - ${MINIO_SERVER_PORT:-9000}:9000
       - ${MINIO_CONSOLE_PORT:-9001}:9001
+    volumes:
+      - ./data:/data
