--- a/mysql/.env
+++ b/mysql/.env
@@ -1,5 +1,9 @@
-MYSQL_ROOT_PASSWORD=123456
-
 # CUSTOM
 TZ=Asia/Shanghai
-MYSQL_PORT=3306
+SERV_PORT=3306
+
+MYSQL_DATABASE=example
+MYSQL_PASSWORD=example
+# MYSQL_ROOT_PASSWORD=123456
+MYSQL_USER=example
+MYSQL_RANDOM_ROOT_PASSWORD=1
