--- a/nginx-php/compose.yaml
+++ b/nginx-php/compose.yaml
@@ -1,9 +1,24 @@
 ---
 
 services:
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    hostname: nginx
+    restart: unless-stopped
+    env_file:
+      - path: ./.env
+        required: false
+    volumes:
+      - ./data/www:/var/www/html:rw
+      - ./conf.d:/etc/nginx/conf.d:rw
+    ports:
+      - 80:80
+
   php-fpm:
     image: php:fpm-alpine
     container_name: php-fpm
+    restart: unless-stopped
     hostname: php-fpm
     volumes:
-      - ./html:/var/www/html:rw
+      - ./data/www:/var/www/html:rw
