--- a/nginx-php/conf.d/default.conf
+++ b/nginx-php/conf.d/default.conf
@@ -1,20 +1,17 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
-    
+
+    server_name localhost;
     root /var/www/html;
     index index.html.php index.php index.html index.htm;
 
     location / {
-        try_files $uri $uri/ =404;
-        gzip_static on;
-        gunzip on;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
-        try_files $uri $uri/ =404;
-        fastcgi_pass php-upstream;
+        fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
